# sabre

./: CONTRIBUTORS  HISTORY  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  RunSabre  RunSabreSDL  VERSION  aclocal.m4  cflags  config.status  configure  configure.in  fly  flySDL
autom4te.cache/: output.0  requests  traces.0
debian/: README.Debian  changelog  control  copyright  dirs  rules  sabre.6  sabre.README.Debian  sabre.menu  sabre.postinst  sabre.postrm  xsabre.README.Debian  xsabre.desktop  xsabre.dirs  xsabre.menu
debian/patches/: 000_autotools.diff  030_launch_scripts.diff  series
dialogsrc/: Makefile  Makefile.am  Makefile.in  README  checklist.c  curses.h  dialog.c  dialog.h  inputbox.c  menubox.c  msgbox.c  textbox.c  util.c  yesno.c
doc/: Makefile  Makefile.am  Makefile.in  gru.txt  intro.txt  keys.txt  pilots.txt  shoot.txt  takeoff.txt
gdev/: Makefile  Makefile.am  Makefile.in  fontdev.h  fontedit.C  fontedit.h  fontutils.C  fontutils.h  gdev-svgalib.C  gdev-svgalib.h  gdev.C  gdev.h  hello.C  hello.h
joystick/: Makefile  Makefile.am  Makefile.in
lib/: Makefile  Makefile.am  Makefile.in  a.flt  a.gru  a.wld  distrib.lst  dogfight.flt  dogfight.wps  ed.wld  f84.spc  fly.grp  fly.nds  fly.wps  furball.flt  furball.grp  gru.flt  gru.grp  gru.wld  gru.wps  gru2.flt  gru2.nds  gru3.nds  hvar.shp  joy0.def  joy1.def  m43.shp  m64.shp  melee.flt  melee.grp  melee.nds  migjump.flt  pistons.flt  pistons.grp  pistons.nds  sabre.shp  sabre.spc  sabre.wpn  shoot1.flt  shoot1.grp  (+12 more)
lib/fonts/: Makefile  Makefile.am
lib/tzp/: 02clouds.tzp  Makefile  Makefile.am  Makefile.in  base0000.tzp  clou0000.tzp  clou0002.tzp  clou0003.tzp  clou0100.tzp  clou0101.tzp  clou0103.tzp  clou0200.tzp  clou0201.tzp  clou0300.tzp  clou0302.tzp  clou0303.tzp  cltp0000.tzp  cltp0001.tzp  cltp0100.tzp  cltp0101.tzp  cltp0102.tzp  cltp0103.tzp  cltp0203.tzp  cltp0300.tzp  cltp0303.tzp  distrib.lst  gunport0.tzp  kore0005.tzp  kore0008.tzp  kore0014.tzp  kore0015.tzp  kore0100.tzp  kore0101.tzp  kore0102.tzp  kore0104.tzp  kore0105.tzp  kore0107.tzp  kore0109.tzp  kore0110.tzp  kore0112.tzp  (+126 more)
libzip/: Makefile  Makefile.am  Makefile.in  bits.c  comp.h  crc.c  crc.h  deflate.c  inflate.c  inflate.h  mytypes.h  trees.c  unc.c  unc.h  zip.h
opk/: RunSabre  default.gcw0.desktop
opk/doc/: CONTRIBUTORS  HISTORY  JOYSTICK.README  README  REQUIREMENTS  TODO  TROUBLE_SHOOTING  WHATSNEW  gru.txt  intro.txt  keys.txt  moral.txt  shoot.txt  takeoff.txt
opk/lib/: a.cpk  a.hud  a.plt  a.spc  a.txr  b.gru  dogfight.grp  dogfight.nds  droptnk.shp  f84.shp  fly.flt  furball.nds  gru.nds  gru2.grp  gru2.wld  gru2.wps  gru3.flt  gru3.grp  joy1.def  korea.trn  mig15.shp  mig15.spc  migjump.grp  migjump.nds  p51.shp  p51.spc  pistions.nds  sabre.pil  shoot1.nds  shoot1.wps  shoot2.grp  shoot2.wps  simfnt-8x8  simfnt6.fnt  takeoff.grp  takeoff.wps  thunder.nds  yak09.shp  yak09.spc  yakattak.flt  (+1 more)
opk/lib/fonts/: Makefile.in
opk/lib/tzp/: basesdw0.tzp  clou0001.tzp  clou0102.tzp  clou0202.tzp  clou0203.tzp  clou0301.tzp  cltp0002.tzp  cltp0003.tzp  cltp0200.tzp  cltp0201.tzp  cltp0202.tzp  cltp0301.tzp  cltp0302.tzp  ctop0000.tzp  f86str00.tzp  f9fcpk.tzp  fire.tzp  kore0000.tzp  kore0001.tzp  kore0002.tzp  kore0003.tzp  kore0004.tzp  kore0006.tzp  kore0007.tzp  kore0009.tzp  kore0010.tzp  kore0011.tzp  kore0012.tzp  kore0013.tzp  kore0103.tzp  kore0106.tzp  kore0108.tzp  kore0111.tzp  kore0113.tzp  kore0115.tzp  kore0201.tzp  kore0202.tzp  kore0204.tzp  kore0205.tzp  kore0208.tzp  (+108 more)
opk/scenarios/: dogfight  fly  gru2  pistons  shoot1  shoot2  shoot3  takeoff  thunder
scenarios/: Makefile  Makefile.am  Makefile.in  distrib.lst  fly  furball  gru  gru3  melee  migjump  yakattak
sdlsrc/: Makefile  Makefile.am  Makefile.in  README  SDL_PORT_README  fontdev.C  input.C  kbdhit.C  vga_13.C
src/: COPYING  Makefile  Makefile.am  Makefile.in  aaaunit.C  aibase.C  aibase.h  aicomm.h  aiflite.C  aiflite.h  aigunner.C  aigunner.h  aimath.h  aipildef.h  aipilot.C  aipilot.h  aipilot2.C  aipilot3.C  aipilot4.C  aipilot5.C  aipilot6.C  bits.C  bits.h  brsnline.h  clip.C  clip.h  clstypes.h  cockpit.C  cockpit.h  colormap.C  colormap.h  colorspc.C  colorspc.h  comp.h  convert.h  convpoly.C  convpoly.h  copoly.C  copoly.h  cpoly.C  (+165 more)
